crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__var_suffixes.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-45,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @15-19 Apply(
                @15-19 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @15-19 Var {
                        module_name: "",
                        ident: "foo",
                    },
                    @15-19 Closure(
                        [
                            @11-12 Identifier {
                                ident: "a",
                            },
                        ],
                        @15-19 Apply(
                            @15-19 Var {
                                module_name: "Task",
                                ident: "await",
                            },
                            [
                                @24-33 Var {
                                    module_name: "",
                                    ident: "bar",
                                },
                                @15-19 Closure(
                                    [
                                        @24-33 Identifier {
                                            ident: "#!a0",
                                        },
                                    ],
                                    @24-33 Apply(
                                        @24-33 Var {
                                            module_name: "Task",
                                            ident: "await",
                                        },
                                        [
                                            @24-33 Var {
                                                module_name: "",
                                                ident: "#!a0",
                                            },
                                            @24-33 Closure(
                                                [
                                                    @24-25 Identifier {
                                                        ident: "b",
                                                    },
                                                ],
                                                @38-45 Apply(
                                                    @38-41 Var {
                                                        module_name: "",
                                                        ident: "baz",
                                                    },
                                                    [
                                                        @42-43 Var {
                                                            module_name: "",
                                                            ident: "a",
                                                        },
                                                        @44-45 Var {
                                                            module_name: "",
                                                            ident: "b",
                                                        },
                                                    ],
                                                    Space,
                                                ),
                                            ),
                                        ],
                                        BangSuffix,
                                    ),
                                ),
                            ],
                            BangSuffix,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
