crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__when_simple.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-74,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "list",
            },
            @11-74 Apply(
                @11-74 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @16-24 Var {
                        module_name: "",
                        ident: "getList",
                    },
                    @11-74 Closure(
                        [
                            @16-24 Identifier {
                                ident: "#!0_arg",
                            },
                        ],
                        @11-74 When(
                            @16-24 Var {
                                module_name: "",
                                ident: "#!0_arg",
                            },
                            [
                                WhenBranch {
                                    patterns: [
                                        @36-38 List(
                                            [],
                                        ),
                                    ],
                                    value: @42-49 Str(
                                        PlainLine(
                                            "empty",
                                        ),
                                    ),
                                    guard: None,
                                },
                                WhenBranch {
                                    patterns: [
                                        @58-59 Underscore(
                                            "",
                                        ),
                                    ],
                                    value: @63-74 Str(
                                        PlainLine(
                                            "non-empty",
                                        ),
                                    ),
                                    guard: None,
                                },
                            ],
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
